# blog-content

./: .gitignore  README.md  pyproject.toml
hybrid-retrieval-evaluation/: .env.example  README.md  create_eval_questions.py  data.json  evaluation_results.json  main.py  requirements.txt  retrieval_eval_dataset.jsonl  test_query.py
post-blueprint/: README.md  main.py
structured-extraction/: README.md  comparison.md  comparison_results.json  example_document.md  main.py  requirements.txt
structured-extraction-benchmark/: main.py  schema.json
